--- a/app/back/package.json
+++ b/app/back/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.1.0",
+    "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
     "react-router-dom": "^7.1.3"
   }
