--- a/app/front/package.json
+++ b/app/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.8",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
@@ -16,6 +17,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
@@ -45,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
