--- a/app/front/package.json
+++ b/app/front/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
+    "gsap": "^3.12.7",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "react": "^19.0.0",
