--- a/app/back/package.json
+++ b/app/back/package.json
@@ -11,14 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.1",
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.1.0",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.9.5",
-    "react-router-dom": "^7.1.3"
+    "mongoose": "^8.9.5"
   }
 }
