--- a/app/front/package.json
+++ b/app/front/package.json
@@ -5,20 +5,9 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
-    "chart.js": "^4.4.8",
-    "cors": "^2.8.5",
-    "cra-template": "1.2.0",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "firebase": "^11.2.0",
-    "gsap": "^3.12.7",
-    "mongoose": "^8.9.5",
-    "morgan": "^1.10.0",
     "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
@@ -49,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1"
+  }
 }
